Several bug fixes. Most important change is that the 'ricci_pw.txt' file has been removed and the ricci_pw variable added to the general cluster configuration file. Made progress on the anvil_setup script as well. Started working on moving mail settings to the main an.conf file as well.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -22,23 +22,29 @@
 # must be resolvable to the target machine (ie: via /etc/hosts + ~/.ssh/config)
 # The 'company' is a free-form field.
 # The 'description' is also a free-form field.
+# The 'ricci_pw' is the password set for the 'ricci' user when the node was
+# setup. This is needed in order to add and remove servers from your Anvil!.
 cluster::1::name		=	an-cluster-01
 cluster::1::nodes		=	an-c01n01, an-c01n02
 cluster::1::company		=	Alteeve's Niche!
 cluster::1::description		=	Cluster 01
+cluster::1::ricci_pw		=	secret
 
 cluster::2::name		=	cc-cluster-01
 cluster::2::nodes		=	cc-c01n01.remote, cc-c01n02.remote
 cluster::2::company		=	Another Company
 cluster::2::description		=	Cluster 01 (in DC)
+cluster::2::ricci_pw		=	foobar
 
 cluster::3::name		=	cc-cluster-02
 cluster::3::nodes		=	cc-c02n01.remote, cc-c02n02.remote
 cluster::3::company		=	Another Company
 cluster::3::description		=	Cluster 02 (in DC)
+cluster::3::ricci_pw		=	foobar
 
 cluster::4::name		=	pp-cluster-01
 cluster::4::nodes		=	pp-c01n01, pp-c01n02
 cluster::4::company		=	Yet Another Company
 cluster::4::description		=	Cluster 01
+cluster::4::ricci_pw		=	A wierd -password!
 
