--- a/an.conf
+++ b/an.conf
@@ -13,38 +13,97 @@
 
 ### Common - These values apply to all utilities.
 
-# This defines the cluster. If you want to defined multiple clusters for
-# AN!CDB, copy this section and increment the integer. The order and value do
-# not matter. It's simply a differentiator.
+# This configures how email is sent from this machine. Please be sure to set
+# the values below to the values given to you by your mail administrator (if
+# that's not you).
+#
+# This is the mail server to connect to when sending email.
+smtp::server			=	mail.example.ca
 
-# The 'name' must match the name set in the cluster.conf file. 
-# The 'nodes' is a comma-separated list of nodes. On the AN!CDB server, this
-# must be resolvable to the target machine (ie: via /etc/hosts + ~/.ssh/config)
-# The 'company' is a free-form field.
-# The 'description' is also a free-form field.
-# The 'ricci_pw' is the password set for the 'ricci' user when the node was
-# setup. This is needed in order to add and remove servers from your Anvil!.
+# This is the TCP port used to connect to the mail server.
+smtp::port			=	587
+
+# This is the number of seconds to wait for a responce when connection to the
+# mail server on the given port that you set above.
+smtp::timeout			=	60
+
+# This is the email address/IMAP user to send to the mail server. It is also
+# the address used in the "From: " field for emails sent from this machine.
+# NOTE: If you IMAP user name is not an email address, this may not work (it
+# has not been tested). If you have trouble, please let us know:
+# - https://alteeve.ca/w/Support
+smtp::username			=	clusters@alteeve.ca
+
+# This is the password used for the email account above.
+smtp::password			=	secret
+
+# This is the security level to use when connecting to the peer, if needed.
+smtp::security			=	STARTTLS
+
+# This tells us to use an encrypted connection to the mail server. Set to '0'
+# to send email plain-text (not recommended!).
+smtp::encrypt_pass		=	1
+
+# This is the domain given to the mail server when establishing the connection.
+smtp::helo_domain		=	alteeve.ca
+
+# This is a comma-separated list of email recipients. Please use bare email
+# addresses only.
+mail_data::to			=	change.me@example.ca
+
+# This sets the "sending domain" when sending email. It should match
+# smtp::server in most cases.
+mail_data::sending_domain	=	mail.example.ca
+
+
+# NOTE: Only needed for 'an-cm' running on Anvil! nodes!
+# This must match one of the clusters defined below (match the appropriate
+# 'cluster::X::name' field). It is used to simplify distributing a large common
+# an.conf to all nodes/dashboards in multi-Anvil! sites. Be sure to update this
+# value on all nodes when pushing updates! Leave blank on Dashboards.
+#this_cluster			=	an-cluster-05
+this_cluster			=	
+
+
+# This defines the cluster. If you want to defined multiple clusters for
+# AN!CDB, copy an entry in this section and increment the variable integer. 
+# The order and value do not matter. It's simply a differentiator. If only one
+# entry exists, the Dashboard's Anvil! selection screen will not show and the
+# sole entry will be auto-selected.
+
+# Variables are:
+# name:        Must match the name set in the Anvil!'s "cluster.conf" file. 
+# nodes:       A comma-separated list of nodes. On the AN!CDB server, this must
+#              be resolvable to the target machine (ie: via /etc/hosts +
+#              ~/.ssh/config)
+# company:     A free-form field used to show the owner of the Anvil!. 
+#              Particularly useful for resellers and companies with divisions.
+# description: Also a free-form field used to describe the purpose of the
+#              particular Anvil!.
+# url:         If defined, a link to the given URL will be shown beside the
+#              Anvil!'s name in the Dashboard's Anvil! selection screen. Useful
+#              for linking to internal documentation or similar.
+# ricci_pw:    This is the password used by the 'ricci' user on the Anvil!'s
+#              nodes. It must be set accurately in order to add or remove
+#              servers.
 cluster::1::name		=	an-cluster-01
-cluster::1::nodes		=	an-c01n01, an-c01n02
+cluster::1::nodes		=	an-c01n01.remote, an-c01n02.remote
 cluster::1::company		=	Alteeve's Niche!
-cluster::1::description		=	Cluster 01
+cluster::1::description		=	Cluster 01 (Production Cluster - "Sagan")
+cluster::1::url			=	https://internal.alteeve.ca/w/an-cluster-01
 cluster::1::ricci_pw		=	secret
 
-cluster::2::name		=	cc-cluster-01
-cluster::2::nodes		=	cc-c01n01.remote, cc-c01n02.remote
-cluster::2::company		=	Another Company
-cluster::2::description		=	Cluster 01 (in DC)
-cluster::2::ricci_pw		=	foobar
+cluster::2::name		=	an-cluster-03
+cluster::2::nodes		=	an-c03n01, an-c03n02
+cluster::2::company		=	Alteeve's Niche!
+cluster::2::description		=	Cluster 03 (Dev Cluster - "Vishniac")
+cluster::2::url			=	https://internal.alteeve.ca/w/an-cluster-03
+cluster::2::ricci_pw		=	secret
 
-cluster::3::name		=	cc-cluster-02
-cluster::3::nodes		=	cc-c02n01.remote, cc-c02n02.remote
-cluster::3::company		=	Another Company
-cluster::3::description		=	Cluster 02 (in DC)
-cluster::3::ricci_pw		=	foobar
-
-cluster::4::name		=	pp-cluster-01
-cluster::4::nodes		=	pp-c01n01, pp-c01n02
-cluster::4::company		=	Yet Another Company
-cluster::4::description		=	Cluster 01
-cluster::4::ricci_pw		=	A wierd -password!
+cluster::3::name		=	an-cluster-05
+cluster::3::nodes		=	an-c05n01, an-c05n02
+cluster::3::company		=	Alteeve's Niche!
+cluster::3::description		=	Cluster 05 (Demo Cluster - "Tyson")
+cluster::3::url			=	https://internal.alteeve.ca/w/an-cluster-05
+cluster::3::ricci_pw		=	secret
 
