Removed the need for 'this_cluster' in an.conf. Made 'an-cm' go into a loop when 'cluster.conf' doesn't exist yet. Made 'an-cdb-install.sh' use prompts for the needed information instead of forcing the user to edit the script itself.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -61,6 +61,11 @@ mail_data::sending_domain	=	mail.example.ca
 # 'cluster::X::name' field). It is used to simplify distributing a large common
 # an.conf to all nodes/dashboards in multi-Anvil! sites. Be sure to update this
 # value on all nodes when pushing updates! Leave blank on Dashboards.
+#
+# If left blank on an Anvil! node, an-cm will try to set this based on the
+# cluster name found in /etc/cluster/cluster.conf. If neither this is set ot
+# cluster.conf exists, an-cm will enter a loop and keep checking for every 30
+# seconds.
 #this_cluster			=	an-cluster-05
 this_cluster			=	
 
