Fixed the an.conf file.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -32,7 +32,7 @@ smtp::timeout			=	60
 # NOTE: If you IMAP user name is not an email address, this may not work (it
 # has not been tested). If you have trouble, please let us know:
 # - https://alteeve.ca/w/Support
-smtp::username			=	clusters@alteeve.ca
+smtp::username			=	clusters@example.ca
 
 # This is the password used for the email account above.
 smtp::password			=	secret
@@ -45,7 +45,7 @@ smtp::security			=	STARTTLS
 smtp::encrypt_pass		=	1
 
 # This is the domain given to the mail server when establishing the connection.
-smtp::helo_domain		=	alteeve.ca
+smtp::helo_domain		=	example.ca
 
 # This is a comma-separated list of email recipients. Please use bare email
 # addresses only.
@@ -54,20 +54,6 @@ mail_data::to			=	change.me@example.ca
 # This sets the "sending domain" when sending email. It should match
 # smtp::server in most cases.
 mail_data::sending_domain	=	mail.example.ca
-
-
-# NOTE: Only needed for 'an-cm' running on Anvil! nodes!
-# This must match one of the clusters defined below (match the appropriate
-# 'cluster::X::name' field). It is used to simplify distributing a large common
-# an.conf to all nodes/dashboards in multi-Anvil! sites. Be sure to update this
-# value on all nodes when pushing updates! Leave blank on Dashboards.
-#
-# If left blank on an Anvil! node, an-cm will try to set this based on the
-# cluster name found in /etc/cluster/cluster.conf. If neither this is set ot
-# cluster.conf exists, an-cm will enter a loop and keep checking for every 30
-# seconds.
-#this_cluster			=	an-cluster-05
-this_cluster			=	
 
 
 # This defines the cluster. If you want to defined multiple clusters for
@@ -111,4 +97,3 @@ cluster::3::company		=	Alteeve's Niche!
 cluster::3::description		=	Cluster 05 (Demo Cluster - "Tyson")
 cluster::3::url			=	https://internal.alteeve.ca/w/an-cluster-05
 cluster::3::ricci_pw		=	secret
-
