Fixed the an.conf file.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -3,8 +3,7 @@
 # Alteeve's Niche!                                    Utilities Configuration #
 #                                                                             #
 # This is the global configuration for for AN!Utilities. This file is used to #
-# configure how AN!CDB - Cluster Dashboard, AN!CM - Cluster Monitor and       #
-# AN!SCS - Safe Cluster Shutdown operate.                                     #
+# configure how AN!CDB - Cluster Dashboard and AN!CM - Cluster Monitor.       #
 #                                                                             #
 # Only sections relevant to the host system need be configured. Other values  #
 # will simply be ignored.                                                     #
