Removed the erroneous 'mail.' prefix from the 'sending_domain' sample value.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -52,7 +52,7 @@ mail_data::to			=	change.me@example.ca
 
 # This sets the "sending domain" when sending email. It should match
 # smtp::server in most cases.
-mail_data::sending_domain	=	mail.example.ca
+mail_data::sending_domain	=	example.ca
 
 
 # This defines the cluster. If you want to defined multiple clusters for
