The udev-triggered an-usb-insert and an-usb-remove scripts now work. I need to test them more before I would call them ready for production, but they do now properly mount a USB drive plugged into a specific port onto a defined server. Likewise, unplugging the USB drive will cause the mount point to be removed on both the server and the dashboard.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/tools/an-usb.conf
+++ b/tools/an-usb.conf
@@ -40,7 +40,17 @@
 # 
 
 ### Variables
-# 
+#
+# When it's time to mount the local USB drive's mount point on a remote
+# machine, we need to pass credentials to the remote machine in order for it
+# to connect to this machine.
+#
+# The host name entered below must be resolvable on the target server. If in
+# doubt, use this machine's IP address.
+local::host			=	10.255.4.3
+local::user			=	root
+local::password			=	secret
+
 # Local directory to mount the inserted device on. If the specified directory
 # does exit, it will be created. If multiple partitions exist on the inserted
 # USB drive, the first partition will mount with the given name and each
