Fixed some bugs in the an-usb scripts. Now properly mounts multiple partitions and gives more useful error messages in syslog when things don't work.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/tools/an-usb.conf
+++ b/tools/an-usb.conf
@@ -12,7 +12,7 @@
 # 
 # Server:
 # rpm -Uvh http://fedora.mirror.nexicom.net/epel/6/x86_64/epel-release-6-8.noarch.rpm
-# yum install perl-Net-SSH-Perl
+# yum install perl-Net-SSH-Perl ntfs-3g sshfs
 # 
 # Targets:
 # yum install sshfs
