Make the an-cdb installer slightly smarted on the perl module install. First major chunk of work on WebUI config management done, though it doesn't save yet.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -1,12 +1,10 @@
 ###############################################################################
 #                                                                             #
-# Alteeve's Niche!                                    Utilities Configuration #
+# Alteeve's Niche!                                    Dashboard Configuration #
 #                                                                             #
-# This is the global configuration for for AN!Utilities. This file is used to #
-# configure how AN!CDB - Cluster Dashboard and AN!CM - Cluster Monitor.       #
-#                                                                             #
-# Only sections relevant to the host system need be configured. Other values  #
-# will simply be ignored.                                                     #
+# This is the global configuration for for AN!CDB dashboard and AN!CM alert   #
+# monitoring system. Once configured on a dashboard, you can copy it as-is to #
+# your nodes.
 #                                                                             #
 ###############################################################################
 
@@ -17,7 +15,7 @@
 # that's not you).
 #
 # This is the mail server to connect to when sending email.
-smtp::server			=	mail.example.ca
+smtp::server			=	mail.example.com
 
 # This is the TCP port used to connect to the mail server.
 smtp::port			=	587
@@ -31,9 +29,11 @@ smtp::timeout			=	60
 # NOTE: If you IMAP user name is not an email address, this may not work (it
 # has not been tested). If you have trouble, please let us know:
 # - https://alteeve.ca/w/Support
-smtp::username			=	clusters@example.ca
+smtp::username			=	alert@example.com
 
-# This is the password used for the email account above.
+# This is the password used for the email account above. This can be the
+# password directly, or a file that contains the password.
+#smtp::password			=	file:./email_pw.txt
 smtp::password			=	secret
 
 # This is the security level to use when connecting to the peer, if needed.
@@ -44,15 +44,15 @@ smtp::security			=	STARTTLS
 smtp::encrypt_pass		=	1
 
 # This is the domain given to the mail server when establishing the connection.
-smtp::helo_domain		=	example.ca
+smtp::helo_domain		=	example.com
 
 # This is a comma-separated list of email recipients. Please use bare email
 # addresses only.
-mail_data::to			=	change.me@example.ca
+mail_data::to			=	you@example.com
 
 # This sets the "sending domain" when sending email. It should match
 # smtp::server in most cases.
-mail_data::sending_domain	=	example.ca
+mail_data::sending_domain	=	example.com
 
 
 # This defines the cluster. If you want to defined multiple clusters for
@@ -76,23 +76,9 @@ mail_data::sending_domain	=	example.ca
 # ricci_pw:    This is the password used by the 'ricci' user on the Anvil!'s
 #              nodes. It must be set accurately in order to add or remove
 #              servers.
-cluster::1::name		=	an-cluster-01
-cluster::1::nodes		=	an-c01n01.remote, an-c01n02.remote
-cluster::1::company		=	Alteeve's Niche!
-cluster::1::description		=	Cluster 01 (Production Cluster - "Sagan")
-cluster::1::url			=	https://internal.alteeve.ca/w/an-cluster-01
-cluster::1::ricci_pw		=	secret
-
-cluster::2::name		=	an-cluster-03
-cluster::2::nodes		=	an-c03n01, an-c03n02
-cluster::2::company		=	Alteeve's Niche!
-cluster::2::description		=	Cluster 03 (Dev Cluster - "Vishniac")
-cluster::2::url			=	https://internal.alteeve.ca/w/an-cluster-03
-cluster::2::ricci_pw		=	secret
-
-cluster::3::name		=	an-cluster-05
-cluster::3::nodes		=	an-c05n01, an-c05n02
-cluster::3::company		=	Alteeve's Niche!
-cluster::3::description		=	Cluster 05 (Demo Cluster - "Tyson")
-cluster::3::url			=	https://internal.alteeve.ca/w/an-cluster-05
-cluster::3::ricci_pw		=	secret
+#cluster::1::name		=	an-cluster-01
+#cluster::1::nodes		=	an-c01n01.remote, an-c01n02.remote
+#cluster::1::company		=	Alteeve's Niche!
+#cluster::1::description	=	Cluster 01 (Production Cluster - "Sagan")
+#cluster::1::url		=	https://internal.alteeve.ca/w/an-cluster-01
+#cluster::1::ricci_pw		=	secret
