This version introduces WebUI cluster configration. This still needs more testing, but so far it looks like it works. Updated the an-cdb installer to re-disable iptables and selinux for now. Will re-enable those as soon as I get a chance to finish testing the new feature.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/an.conf
+++ b/an.conf
@@ -4,7 +4,7 @@
 #                                                                             #
 # This is the global configuration for for AN!CDB dashboard and AN!CM alert   #
 # monitoring system. Once configured on a dashboard, you can copy it as-is to #
-# your nodes.
+# your nodes.                                                                 #
 #                                                                             #
 ###############################################################################
 
