--- a/an.conf
+++ b/an.conf
@@ -75,7 +75,10 @@ mail_data::sending_domain	=	example.com
 #              for linking to internal documentation or similar.
 # ricci_pw:    This is the password used by the 'ricci' user on the Anvil!'s
 #              nodes. It must be set accurately in order to add or remove
-#              servers.
+#              servers. If a password is needed to log into one of the nodes,
+#              this password will be used. If this doesn't work, you will need
+#              to manually add the dashboard's public key to each node's root
+#              user's 'authorized_keys' file.
 #cluster::1::name		=	an-cluster-01
 #cluster::1::nodes		=	an-c01n01.remote, an-c01n02.remote
 #cluster::1::company		=	Alteeve's Niche!
