--- a/an.conf
+++ b/an.conf
@@ -54,6 +54,11 @@ mail_data::to			=	you@example.com
 # smtp::server in most cases.
 mail_data::sending_domain	=	example.com
 
+# This is the port to use when connecting to the guacamole server. Normally,
+# this is 8080, but may be overridden on a per-Anvil! basis for remote
+# access configurations.
+guacd::port			=	8080
+
 
 # This defines the cluster. If you want to defined multiple clusters for
 # AN!CDB, copy an entry in this section and increment the variable integer. 
@@ -79,9 +84,5 @@ mail_data::sending_domain	=	example.com
 #              this password will be used. If this doesn't work, you will need
 #              to manually add the dashboard's public key to each node's root
 #              user's 'authorized_keys' file.
-#cluster::1::name		=	an-cluster-01
-#cluster::1::nodes		=	an-c01n01.remote, an-c01n02.remote
-#cluster::1::company		=	Alteeve's Niche!
-#cluster::1::description	=	Cluster 01 (Production Cluster - "Sagan")
-#cluster::1::url		=	https://internal.alteeve.ca/w/an-cluster-01
-#cluster::1::ricci_pw		=	secret
+# guac::port:  This is used to control which TCP port is used when connecting
+#              to the guacamole server (in-browser remote desktop access).
