--- a/an.conf
+++ b/an.conf
@@ -27,9 +27,7 @@ smtp::port			=	587
 # - https://alteeve.ca/w/Support
 smtp::username			=	alert@example.com
 
-# This is the password used for the email account above. This can be the
-# password directly, or a file that contains the password.
-#smtp::password			=	file:./email_pw.txt
+# This is the password used for the email account above.
 smtp::password			=	secret
 
 # This is the security level to use when connecting to the peer, if needed.
