Few things, probably broke a bunch of things; * Renamed the last few 'an-cdb' and other 'an-<things>'. Most notably being /etc/an/an.conf is now /etc/striker/striker.conf'. This will break upgrades! * Renamed 'an-usb' to 'striker-usb'. Started moving it to the same SSH mechanism as the main program. Began adding LUKS decryption support. Changes totally untested yet, likely broke. * Deleted the old 'an-cluster-setup.pl' tool (replaced by the install manifest).
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/tools/striker-usb.conf
+++ b/tools/striker-usb.conf
@@ -5,17 +5,12 @@
 # of the USB port to be managed.
 # 
 # When a drive is plugged into a managed USB port, it's filesystem(s) will be
-# mounted locally. Then an-cdb will log into a target machine over SSH and use
+# mounted locally. Then striker will log into a target machine over SSH and use
 # sshfs to mount the inserted partition(s) on that target machine.
 # 
 # Requirements:
 # 
-# Server:
-# rpm -Uvh http://fedora.mirror.nexicom.net/epel/6/x86_64/epel-release-6-8.noarch.rpm
-# yum install perl-Net-SSH-Perl ntfs-3g sshfs
-# 
-# Targets:
-# yum install sshfs
+# Target servers require 'sshfs'.
 # 
 # To determin the port address, open a terminal and run:
 #   tail -f /var/log/messages
@@ -23,20 +18,20 @@
 # When the USB drive is plugged into a port, you will see a message like:
 # 
 # ====
-# Mar  2 21:23:50 an-m03 kernel: usb 1-3: new high speed USB device number 7 using ehci_hcd
-# Mar  2 21:23:51 an-m03 kernel: usb 1-3: New USB device found, idVendor=174c, idProduct=55aa
-# Mar  2 21:23:51 an-m03 kernel: usb 1-3: New USB device strings: Mfr=2, Product=3, SerialNumber=1
-# Mar  2 21:23:51 an-m03 kernel: usb 1-3: Product: AS2105
-# Mar  2 21:23:51 an-m03 kernel: usb 1-3: Manufacturer: ASMedia
-# Mar  2 21:23:51 an-m03 kernel: usb 1-3: SerialNumber: 0123456789ABCDEF
-# Mar  2 21:23:51 an-m03 kernel: usb 1-3: configuration #1 chosen from 1 choice
+# Mar  2 21:23:50 an-striker03 kernel: usb 1-3: new high speed USB device number 7 using ehci_hcd
+# Mar  2 21:23:51 an-striker03 kernel: usb 1-3: New USB device found, idVendor=174c, idProduct=55aa
+# Mar  2 21:23:51 an-striker03 kernel: usb 1-3: New USB device strings: Mfr=2, Product=3, SerialNumber=1
+# Mar  2 21:23:51 an-striker03 kernel: usb 1-3: Product: AS2105
+# Mar  2 21:23:51 an-striker03 kernel: usb 1-3: Manufacturer: ASMedia
+# Mar  2 21:23:51 an-striker03 kernel: usb 1-3: SerialNumber: 0123456789ABCDEF
+# Mar  2 21:23:51 an-striker03 kernel: usb 1-3: configuration #1 chosen from 1 choice
 # ====
 # 
 # The USB address in the above example is "1-3". Knowing this, the variable
 # names used below will start with 'usb::1-3::...'. 
 # 
 # If a mass storage device is plugged into any USB port not specified here,
-# an-usb will simply ignore it.
+# striker-usb will simply ignore it.
 # 
 
 ### Variables
@@ -70,23 +65,30 @@ local::password			=	secret
 #
 # This is the directory to mount point to use on the remote machine
 #
-#usb::X-Y::sshfs::remote_mount	=	/media/an-m03-1-1
+#usb::X-Y::sshfs::remote_mount	=	/media/an-striker03-1-1
 # 
+
+# For block devices that are LUKS encypted, you can specify the passphrase
+# using the luks::<uuid> = <passphrase> format. You can get the UUID of a
+# device with:
+#   cryptsetup luksUUID /dev/sda2
+luks::ddaf4085-20ca-4ffe-85a4-8bd9f39d3e13	=	supersecret
 
 ### Examples
 #
-# Note: In this example, the server's host name is 'an-m03'.
+# Note: In this example, the server's host name is 'an-striker03'.
 #
 # Front panel, furthest left.
 usb::1-3::local_mount		=	/mnt/1-3
-usb::1-3::sshfs::remote_mount	=	/media/an-m03-1-3
+usb::1-3::sshfs::remote_mount	=	/media/an-striker03-1-3
 usb::1-3::sshfs::host		=	vm01-foo.alteeve.ca
 usb::1-3::sshfs::user		=	digimer
 usb::1-3::sshfs::password	=	secret
 
 # Front panel, second from left.
 usb::1-1::local_mount		=	/mnt/1-1
-usb::1-1::sshfs::remote_mount	=	/media/an-m03-1-1
+usb::1-1::sshfs::remote_mount	=	/media/an-striker03-1-1
 usb::1-1::sshfs::host		=	vm02-bar.alteeve.ca
 usb::1-1::sshfs::user		=	digimer
 usb::1-1::sshfs::password	=	secret
+
