Modified to use 'alteeve identity.

--- a/Scanner/Config/db.ini
+++ b/Scanner/Config/db.ini
@@ -1,5 +1,5 @@
 db::1::name    =    alteeve
 db::1::host    =    localhost
 db::1::port    =    5432
-db::1::user    =    legrady
+db::1::user    =    alteeve
 db::1::password    =    alteeve
