--- a/Scanner/Config/db.ini
+++ b/Scanner/Config/db.ini
@@ -1,4 +1,4 @@
-db::1::name      = alteeve
+db::1::name      = scanner
 db::1::db_type   = Pg
 db::1::host      = localhost
 db::1::port      = 5432
