--- a/Scanner/Config/snmp_apc_ups.ini
+++ b/Scanner/Config/snmp_apc_ups.ini
@@ -1,5 +1,5 @@
 snmp::1::name      = an-u01
-snmp::1::type      = APC
+snmp::1::type      = APC UPS
 snmp::1::ip        = 10.20.3.251
 snmp::1::community = public
 #snmp::1::oid::ups  type                 = .1.3.6.1.4.1.318.1.1.1.1.1.1.0
