Global and local data in snmp config file.
Allow global data to configure all targets, except where local values
are explicitly specified. DBS attempts to communicate to both DBs,
but dev host doesn't have connectivity.

--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -1,142 +1,174 @@
+# SNMP Configuration for APC UPSes.
+#
+# Global data should be tagged with 'global' at the second level, or
+# equivalenty, with 'default'. The oid to determine the battery
+# temperature is always the same, if we are querying an APC UPS, so
+# OIDs are tagged as global.
+#
+# Data which is different for various entities should be tagged with a
+# number. The appearance of a number rather than letter at the second
+# level indicates characteristics which are unique to a single
+# instance. While names for the multiple instances could in theory be
+# meaningful, the existing code searaches for digits to differentiate
+# global and local data.
+#
+# It is also possible to set a global characteristic and then override
+# it on a local level. To test and demonstrate this, UPS 1 has it's
+# own definition for snmp::reason for last transfer::values::1 ...
+# Instead of 'No events', it uses 'Nothing happened' ... clearly a
+# meaningless and insignificant difference. But using the debugger, we
+# can display the snmp_apc_ups object and see the separate values.
+#
+
 snmp::1::name      = an-u01
 snmp::1::type      = APC UPS
 snmp::1::ip        = 10.20.3.251
 snmp::1::community = public
-#snmp::1::oid::ups  type                 = .1.3.6.1.4.1.318.1.1.1.1.1.1.0
-snmp::1::oid::battery capacity          = .1.3.6.1.4.1.318.1.1.1.2.2.1.0
-snmp::1::oid::battery temperature       = .1.3.6.1.4.1.318.1.1.1.2.2.2.0
-snmp::1::oid::battery runtime remaining = .1.3.6.1.4.1.318.1.1.1.2.2.3.0
-snmp::1::oid::battery replace           = .1.3.6.1.4.1.318.1.1.1.2.2.4.0
-snmp::1::oid::input voltage             = .1.3.6.1.4.1.318.1.1.1.3.2.1.0
-snmp::1::oid::input frequency           = .1.3.6.1.4.1.318.1.1.1.3.2.4.0
-snmp::1::oid::reason for last transfer  = .1.3.6.1.4.1.318.1.1.1.3.2.5.0
-snmp::1::oid::output voltage            = .1.3.6.1.4.1.318.1.1.1.4.2.1.0
-snmp::1::oid::output frequency          = .1.3.6.1.4.1.318.1.1.1.4.2.2.0
-snmp::1::oid::output load               = .1.3.6.1.4.1.318.1.1.1.4.2.3.0
-snmp::1::oid::output current            = .1.3.6.1.4.1.318.1.1.1.4.2.4.0
-snmp::1::oid::comms                     = .1.3.6.1.4.1.318.1.1.1.8.1.0
-snmp::1::oid::last self test result     = .1.3.6.1.4.1.318.1.1.1.7.2.3.0
-snmp::1::oid::last self test date       = .1.3.6.1.4.1.318.1.1.1.7.2.4.0
 
-SNMP::1::battery capacity::units      = %
-snmp::1::battery capacity::min        = 0
-snmp::1::battery capacity::max        = 100
-snmp::1::battery capacity::ok_min     = 50
-snmp::1::battery capacity::ok_max     = 100
-snmp::1::battery capacity::warn_min   = 10
-snmp::1::battery capacity::warn_max   = 50
-snmp::1::battery capacity::crisis_min = 1
-snmp::1::battery capacity::crisis_max = 10
-snmp::1::battery capacity::hysteresis = 1
+snmp::2::name      = an-u02
+snmp::2::type      = APC UPS
+snmp::2::ip        = 10.20.3.252
+snmp::2::community = public
+
+#snmp::global::oid::ups  type                 = .1.3.6.1.4.1.318.1.1.1.1.1.1.0
+snmp::global::oid::battery capacity          = .1.3.6.1.4.1.318.1.1.1.2.2.1.0
+snmp::global::oid::battery temperature       = .1.3.6.1.4.1.318.1.1.1.2.2.2.0
+snmp::global::oid::battery runtime remaining = .1.3.6.1.4.1.318.1.1.1.2.2.3.0
+snmp::global::oid::battery replace           = .1.3.6.1.4.1.318.1.1.1.2.2.4.0
+snmp::global::oid::input voltage             = .1.3.6.1.4.1.318.1.1.1.3.2.1.0
+snmp::global::oid::input frequency           = .1.3.6.1.4.1.318.1.1.1.3.2.4.0
+snmp::global::oid::reason for last transfer  = .1.3.6.1.4.1.318.1.1.1.3.2.5.0
+snmp::global::oid::output voltage            = .1.3.6.1.4.1.318.1.1.1.4.2.1.0
+snmp::global::oid::output frequency          = .1.3.6.1.4.1.318.1.1.1.4.2.2.0
+snmp::global::oid::output load               = .1.3.6.1.4.1.318.1.1.1.4.2.3.0
+snmp::global::oid::output current            = .1.3.6.1.4.1.318.1.1.1.4.2.4.0
+snmp::global::oid::comms                     = .1.3.6.1.4.1.318.1.1.1.8.1.0
+snmp::global::oid::last self test result     = .1.3.6.1.4.1.318.1.1.1.7.2.3.0
+snmp::global::oid::last self test date       = .1.3.6.1.4.1.318.1.1.1.7.2.4.0
+
+SNMP::GLOBAL::battery capacity::units      = %
+snmp::global::battery capacity::min        = 0
+snmp::global::battery capacity::max        = 100
+snmp::global::battery capacity::ok_min     = 50
+snmp::global::battery capacity::ok_max     = 100
+snmp::global::battery capacity::warn_min   = 10
+snmp::global::battery capacity::warn_max   = 50
+snmp::global::battery capacity::crisis_min = 1
+snmp::global::battery capacity::crisis_max = 10
+snmp::global::battery capacity::hysteresis = 1
 
 # http://koninkx.net/index.php/howtos/snmp/8-usefull-oids-for-apc says
 # this can be F or C depending on configuration, but APC MIB file says
 # it is Celsius.
 #
-snmp::1::battery temperature::units      = degrees C
-snmp::1::battery temperature::min        = 0
-snmp::1::battery temperature::max        = 100
-snmp::1::battery temperature::ok_min     = 19
-snmp::1::battery temperature::ok_max     = 22
-snmp::1::battery temperature::warn_min   = 17
-snmp::1::battery temperature::warn_max   = 35
-snmp::1::battery temperature::crisis_min = 15
-snmp::1::battery temperature::crisis_max = 45
-snmp::1::battery temperature::hysteresis = 1
+snmp::global::battery temperature::units      = degrees C
+snmp::global::battery temperature::min        = 0
+snmp::global::battery temperature::max        = 100
+snmp::global::battery temperature::ok_min     = 19
+snmp::global::battery temperature::ok_max     = 22
+snmp::global::battery temperature::warn_min   = 17
+snmp::global::battery temperature::warn_max   = 35
+snmp::global::battery temperature::crisis_min = 15
+snmp::global::battery temperature::crisis_max = 45
+snmp::global::battery temperature::hysteresis = 1
 
-snmp::1::battery runtime remaining::units      = minutes?
-snmp::1::battery runtime remaining::min        = 0
-snmp::1::battery runtime remaining::max        = 100
-snmp::1::battery runtime remaining::ok_min     = 50
-snmp::1::battery runtime remaining::ok_max     = 100
-snmp::1::battery runtime remaining::warn_min   = 5
-snmp::1::battery runtime remaining::warn_max   = 50
-snmp::1::battery runtime remaining::crisis_min = 1
-snmp::1::battery runtime remaining::crisis_max = 5
-snmp::1::battery runtime remaining::hysteresis = 1
+snmp::global::battery runtime remaining::units      = minutes?
+snmp::global::battery runtime remaining::min        = 0
+snmp::global::battery runtime remaining::max        = 100
+snmp::global::battery runtime remaining::ok_min     = 50
+snmp::global::battery runtime remaining::ok_max     = 100
+snmp::global::battery runtime remaining::warn_min   = 5
+snmp::global::battery runtime remaining::warn_max   = 50
+snmp::global::battery runtime remaining::crisis_min = 1
+snmp::global::battery runtime remaining::crisis_max = 5
+snmp::global::battery runtime remaining::hysteresis = 1
 
-snmp::1::battery replace::values::1        = unneeded
-snmp::1::battery replace::values::2        = needed
+snmp::global::battery replace::values::1        = unneeded
+snmp::global::battery replace::values::2        = needed
 
  
-snmp::1::input voltage::units      = V
-snmp::1::input voltage::min        = 90
-snmp::1::input voltage::max        = 150
-snmp::1::input voltage::ok_min     = 105
-snmp::1::input voltage::ok_max     = 125
-snmp::1::input voltage::warn_min   = 95
-snmp::1::input voltage::warn_max   = 140
-snmp::1::input voltage::crisis_min = 90
-snmp::1::input voltage::crisis_max = 150
-snmp::1::input voltage::hysteresis = 1
+snmp::global::input voltage::units      = V
+snmp::global::input voltage::min        = 90
+snmp::global::input voltage::max        = 150
+snmp::global::input voltage::ok_min     = 105
+snmp::global::input voltage::ok_max     = 125
+snmp::global::input voltage::warn_min   = 95
+snmp::global::input voltage::warn_max   = 140
+snmp::global::input voltage::crisis_min = 90
+snmp::global::input voltage::crisis_max = 150
+snmp::global::input voltage::hysteresis = 1
 
-snmp::1::input frequency::units      = Hz
-snmp::1::input frequency::min        = 55
-snmp::1::input frequency::max        = 65
-snmp::1::input frequency::ok_min     = 58
-snmp::1::input frequency::ok_max     = 62
-snmp::1::input frequency::warn_min   = 56
-snmp::1::input frequency::warn_max   = 64
-snmp::1::input frequency::crisis_min = 55
-snmp::1::input frequency::crisis_max = 65
-snmp::1::input frequency::hysteresis = 1
+snmp::global::input frequency::units      = Hz
+snmp::global::input frequency::min        = 55
+snmp::global::input frequency::max        = 65
+snmp::global::input frequency::ok_min     = 58
+snmp::global::input frequency::ok_max     = 62
+snmp::global::input frequency::warn_min   = 56
+snmp::global::input frequency::warn_max   = 64
+snmp::global::input frequency::crisis_min = 55
+snmp::global::input frequency::crisis_max = 65
+snmp::global::input frequency::hysteresis = 1
 
-snmp::1::reason for last transfer::values::1  = No events
-snmp::1::reason for last transfer::values::2  = High line voltage
-snmp::1::reason for last transfer::values::3  = Brownout
-snmp::1::reason for last transfer::values::4  = Los of mains power
-snmp::1::reason for last transfer::values::5  = Small temporary power drop
-snmp::1::reason for last transfer::values::6  = Large temporary power drop
-snmp::1::reason for last transfer::values::7  = Small spike
-snmp::1::reason for last transfer::values::8  = Large spike
-snmp::1::reason for last transfer::values::9  = UPS self test
-snmp::1::reason for last transfer::values::10 = Excessive input voltage fluctuation
+snmp::global::reason for last transfer::values::1  = No events
+snmp::global::reason for last transfer::values::2  = High line voltage
+snmp::global::reason for last transfer::values::3  = Brownout
+snmp::global::reason for last transfer::values::4  = Los of mains power
+snmp::global::reason for last transfer::values::5  = Small temporary power drop
+snmp::global::reason for last transfer::values::6  = Large temporary power drop
+snmp::global::reason for last transfer::values::7  = Small spike
+snmp::global::reason for last transfer::values::8  = Large spike
+snmp::global::reason for last transfer::values::9  = UPS self test
+snmp::global::reason for last transfer::values::10 = Excessive input voltage fluctuation
 
-snmp::1::output voltage::units      = V
-snmp::1::output voltage::min        = 90
-snmp::1::output voltage::max        = 150
-snmp::1::output voltage::ok_min     = 115
-snmp::1::output voltage::ok_max     = 130
-snmp::1::output voltage::warn_min   = 110
-snmp::1::output voltage::warn_max   = 135
-snmp::1::output voltage::crisis_min = 90
-snmp::1::output voltage::crisis_max = 150
-snmp::1::output voltage::hysteresis = 1
+# test/demonstrate local override of global setting
+#
+snmp::1::reason for last transfer::values::1  = Nothing happened.
 
-snmp::1::output frequency::units      = Hz
-snmp::1::output frequency::min        = 55
-snmp::1::output frequency::max        = 65
-snmp::1::output frequency::ok_min     = 58
-snmp::1::output frequency::ok_max     = 62
-snmp::1::output frequency::warn_min   = 56
-snmp::1::output frequency::warn_max   = 64
-snmp::1::output frequency::crisis_min = 55
-snmp::1::output frequency::crisis_max = 65
-snmp::1::output frequency::hysteresis = 1
+snmp::global::output voltage::units      = V
+snmp::global::output voltage::min        = 90
+snmp::global::output voltage::max        = 150
+snmp::global::output voltage::ok_min     = 115
+snmp::global::output voltage::ok_max     = 130
+snmp::global::output voltage::warn_min   = 110
+snmp::global::output voltage::warn_max   = 135
+snmp::global::output voltage::crisis_min = 90
+snmp::global::output voltage::crisis_max = 150
+snmp::global::output voltage::hysteresis = 1
 
-snmp::1::output load::units      = %
-snmp::1::output load::min        = 0
-snmp::1::output load::max        = 100
-snmp::1::output load::ok_min     = 0
-snmp::1::output load::ok_max     = 75
-snmp::1::output load::warn_min   = 75
-snmp::1::output load::warn_max   = 95
-snmp::1::output load::crisis_min = 95
-snmp::1::output load::crisis_max = 100
-snmp::1::output load::hysteresis = 1
+snmp::global::output frequency::units      = Hz
+snmp::global::output frequency::min        = 55
+snmp::global::output frequency::max        = 65
+snmp::global::output frequency::ok_min     = 58
+snmp::global::output frequency::ok_max     = 62
+snmp::global::output frequency::warn_min   = 56
+snmp::global::output frequency::warn_max   = 64
+snmp::global::output frequency::crisis_min = 55
+snmp::global::output frequency::crisis_max = 65
+snmp::global::output frequency::hysteresis = 1
 
-snmp::1::output current::units      = A
-snmp::1::output current::min        = 0
-snmp::1::output current::max        = 5
-snmp::1::output current::ok_min     = 0
-snmp::1::output current::ok_max     = 4
-snmp::1::output current::warn_min   = 4
-snmp::1::output current::warn_max   = 4.7
-snmp::1::output current::crisis_min = 4.7
-snmp::1::output current::crisis_max = 5
-snmp::1::output current::hysteresis = 0.1
+snmp::global::output load::units      = %
+snmp::global::output load::min        = 0
+snmp::global::output load::max        = 100
+snmp::global::output load::ok_min     = 0
+snmp::global::output load::ok_max     = 75
+snmp::global::output load::warn_min   = 75
+snmp::global::output load::warn_max   = 95
+snmp::global::output load::crisis_min = 95
+snmp::global::output load::crisis_max = 100
+snmp::global::output load::hysteresis = 1
 
-snmp::1::comms::label       = Communicating
-snmp::1::comms::values::1  = yes
-snmp::1::comms::values::2  = no
+snmp::global::output current::units      = A
+snmp::global::output current::min        = 0
+snmp::global::output current::max        = 5
+snmp::global::output current::ok_min     = 0
+snmp::global::output current::ok_max     = 4
+snmp::global::output current::warn_min   = 4
+snmp::global::output current::warn_max   = 4.7
+snmp::global::output current::crisis_min = 4.7
+snmp::global::output current::crisis_max = 5
+snmp::global::output current::hysteresis = 0.1
+
+snmp::global::comms::label       = Communicating
+snmp::global::comms::values::1  = yes
+snmp::global::comms::values::2  = no
 
