Developed RAID agent, needs debugging

--- a/Scanner/Config/raid.conf
+++ b/Scanner/Config/raid.conf
@@ -6,6 +6,25 @@ raid::type  = RAID subsystem
 raid::query = wstorcli
 
 
+raid::Drive Temperature::ok_min     =  10
+raid::Drive Temperature::ok_max     =  20
+raid::Drive Temperature::warn_min   =  20
+raid::Drive Temperature::warn_max   =  50
+raid::Drive Temperature::crisis_min =  50
+raid::Drive Temperature::crisis_max =  70
+raid::Drive Temperature::hysteresis =   1
+raid::Drive Temperature::units      = degrees C
+
+
+raid::ROC temperature::ok_min     =  20
+raid::ROC temperature::ok_max     =  70
+raid::ROC temperature::warn_min   =  70
+raid::ROC temperature::warn_max   = 100
+raid::ROC temperature::crisis_min = 100
+raid::ROC temperature::crisis_max = 150
+raid::ROC temperature::hysteresis =   1
+raid::ROC temperature::units      = degrees C
+
 
 # ----------------------------------------------------------------------
 # End of file.
