Generate weighted summary of crisis sensors.
Use common names for conf path and data attributes, rather than
a different name for each agent. Added weights and 'summary' boundary
values, routines to track crisis events, generate summary record.

--- a/Scanner/Config/ipmi.conf
+++ b/Scanner/Config/ipmi.conf
@@ -6,6 +6,16 @@ ipmi::type  = server node
 ipmi::query = wipmi
 
 
+ipmi::summary::max        = 100
+ipmi::summary::ok_min     = 0
+ipmi::summary::ok_max     = 0
+ipmi::summary::warn_min   = 1
+ipmi::summary::warn_max   = 5
+ipmi::summary::crisis_min = 5
+ipmi::summary::crisis_max = 100
+ipmi::summary::hysteresis = 0
+
+
 ipmi::Ambient::ok_min     = 20
 ipmi::Ambient::ok_max     = 45
 ipmi::Ambient::warn_min   = 45
@@ -214,10 +224,10 @@ ipmi::BBU::hysteresis =  1
 ipmi::BBU::units     = degrees C
 
 ipmi::RAID Controller::ok_min     =  20
-ipmi::RAID Controller::ok_max     =  90
-ipmi::RAID Controller::warn_min   =  90
-ipmi::RAID Controller::warn_max   = 100
-ipmi::RAID Controller::crisis_min = 100
+ipmi::RAID Controller::ok_max     =  60
+ipmi::RAID Controller::warn_min   =  60
+ipmi::RAID Controller::warn_max   = 70
+ipmi::RAID Controller::crisis_min = 70
 ipmi::RAID Controller::crisis_max = 150
 ipmi::RAID Controller::hysteresis =   1
 ipmi::RAID Controller::units      = degrees C
