--- a/Scanner/Config/raid.conf
+++ b/Scanner/Config/raid.conf
@@ -5,6 +5,15 @@ raid::ip    = 10.255.4.251
 raid::type  = RAID subsystem
 raid::query = wstorcli
 
+raid::summary::max        = 100
+raid::summary::ok_min     = 0
+raid::summary::ok_max     = 0
+raid::summary::warn_min   = 1
+raid::summary::warn_max   = 5
+raid::summary::crisis_min = 5
+raid::summary::crisis_max = 100
+raid::summary::hysteresis = 0
+
 
 raid::Drive Temperature::ok_min     =  20
 raid::Drive Temperature::ok_max     =  40
@@ -17,10 +26,10 @@ raid::Drive Temperature::units      = degrees C
 
 
 raid::ROC temperature::ok_min     =  20
-raid::ROC temperature::ok_max     =  90
-raid::ROC temperature::warn_min   =  90
-raid::ROC temperature::warn_max   = 100
-raid::ROC temperature::crisis_min = 100
+raid::ROC temperature::ok_max     =  60
+raid::ROC temperature::warn_min   =  60
+raid::ROC temperature::warn_max   = 70
+raid::ROC temperature::crisis_min = 70
 raid::ROC temperature::crisis_max = 150
 raid::ROC temperature::hysteresis =   1
 raid::ROC temperature::units      = degrees C
