--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -30,6 +30,15 @@ snmp::2::type      = APC UPS
 snmp::2::ip        = 10.20.3.252
 snmp::2::community = public
 
+snmp::global::summary::max        = 100
+snmp::global::summary::ok_min     = 0
+snmp::global::summary::ok_max     = 0
+snmp::global::summary::warn_min   = 1
+snmp::global::summary::warn_max   = 5
+snmp::global::summary::crisis_min = 5
+snmp::global::summary::crisis_max = 100
+snmp::global::summary::hysteresis = 0
+
 #snmp::global::oid::ups  type                 = .1.3.6.1.4.1.318.1.1.1.1.1.1.0
 snmp::global::oid::battery capacity          = .1.3.6.1.4.1.318.1.1.1.2.2.1.0
 snmp::global::oid::battery temperature       = .1.3.6.1.4.1.318.1.1.1.2.2.2.0
@@ -46,7 +55,7 @@ snmp::global::oid::comms                     = .1.3.6.1.4.1.318.1.1.1.8.1.0
 snmp::global::oid::last self test result     = .1.3.6.1.4.1.318.1.1.1.7.2.3.0
 snmp::global::oid::last self test date       = .1.3.6.1.4.1.318.1.1.1.7.2.4.0
 
-SNMP::GLOBAL::battery capacity::units      = %
+snmp::global::battery capacity::units      = %
 snmp::global::battery capacity::min        = 0
 snmp::global::battery capacity::max        = 100
 snmp::global::battery capacity::ok_min     = 25
@@ -56,6 +65,7 @@ snmp::global::battery capacity::warn_max   = 25
 snmp::global::battery capacity::crisis_min = 1
 snmp::global::battery capacity::crisis_max = 10
 snmp::global::battery capacity::hysteresis = 1
+snmp::global::battery capacity::weight     = 1
 
 # http://koninkx.net/index.php/howtos/snmp/8-usefull-oids-for-apc says
 # this can be F or C depending on configuration, but APC MIB file says
@@ -65,12 +75,13 @@ snmp::global::battery temperature::units      = degrees C
 snmp::global::battery temperature::min        = 0
 snmp::global::battery temperature::max        = 100
 snmp::global::battery temperature::ok_min     = 10
-snmp::global::battery temperature::ok_max     = 40
-snmp::global::battery temperature::warn_min   = 40
-snmp::global::battery temperature::warn_max   = 50
-snmp::global::battery temperature::crisis_min = 50
+snmp::global::battery temperature::ok_max     = 20
+snmp::global::battery temperature::warn_min   = 20
+snmp::global::battery temperature::warn_max   = 25
+snmp::global::battery temperature::crisis_min = 25
 snmp::global::battery temperature::crisis_max = 60
 snmp::global::battery temperature::hysteresis = 1
+snmp::global::battery temperature::weight     = 1
 
 snmp::global::battery runtime remaining::units      = minutes?
 snmp::global::battery runtime remaining::min        = 0
@@ -82,10 +93,11 @@ snmp::global::battery runtime remaining::warn_max   = 25
 snmp::global::battery runtime remaining::crisis_min = 1
 snmp::global::battery runtime remaining::crisis_max = 10
 snmp::global::battery runtime remaining::hysteresis = 1
+snmp::global::battery runtime remaining::weight     = 1
 
 snmp::global::battery replace::values::1        = unneeded
 snmp::global::battery replace::values::2        = needed
-
+snmp::global::battery replace::weight     = 1
  
 snmp::global::input voltage::units      = V
 snmp::global::input voltage::min        = 90
@@ -97,6 +109,7 @@ snmp::global::input voltage::warn_max   = 140
 snmp::global::input voltage::crisis_min = 90
 snmp::global::input voltage::crisis_max = 150
 snmp::global::input voltage::hysteresis = 1
+snmp::global::input voltage::weight     = 1
 
 snmp::global::input frequency::units      = Hz
 snmp::global::input frequency::min        = 55
@@ -108,6 +121,7 @@ snmp::global::input frequency::warn_max   = 64
 snmp::global::input frequency::crisis_min = 55
 snmp::global::input frequency::crisis_max = 65
 snmp::global::input frequency::hysteresis = 1
+snmp::global::input frequency::weight     = 1
 
 snmp::global::reason for last transfer::values::1  = No events
 snmp::global::reason for last transfer::values::2  = High line voltage
@@ -119,6 +133,7 @@ snmp::global::reason for last transfer::values::7  = Small spike
 snmp::global::reason for last transfer::values::8  = Large spike
 snmp::global::reason for last transfer::values::9  = UPS self test
 snmp::global::reason for last transfer::values::10 = Excessive input voltage fluctuation
+snmp::global::reason for last transfer::weight     = 1
 
 # test/demonstrate local override of global setting
 #
@@ -134,6 +149,7 @@ snmp::global::output voltage::warn_max   = 135
 snmp::global::output voltage::crisis_min = 90
 snmp::global::output voltage::crisis_max = 150
 snmp::global::output voltage::hysteresis = 1
+snmp::global::output voltage::weight     = 1
 
 snmp::global::output frequency::units      = Hz
 snmp::global::output frequency::min        = 55
@@ -145,6 +161,7 @@ snmp::global::output frequency::warn_max   = 64
 snmp::global::output frequency::crisis_min = 55
 snmp::global::output frequency::crisis_max = 65
 snmp::global::output frequency::hysteresis = 1
+snmp::global::output frequency::weight     = 1
 
 snmp::global::output load::units      = %
 snmp::global::output load::min        = 0
@@ -156,6 +173,7 @@ snmp::global::output load::warn_max   = 95
 snmp::global::output load::crisis_min = 95
 snmp::global::output load::crisis_max = 100
 snmp::global::output load::hysteresis = 1
+snmp::global::output load::weight     = 1
 
 snmp::global::output current::units      = A
 snmp::global::output current::min        = 0
@@ -167,8 +185,9 @@ snmp::global::output current::warn_max   = 4.7
 snmp::global::output current::crisis_min = 4.7
 snmp::global::output current::crisis_max = 5
 snmp::global::output current::hysteresis = 0.1
+snmp::global::output current::weight     = 1
 
-snmp::global::comms::label       = Communicating
+snmp::global::comms::label      = Communicating
 snmp::global::comms::values::1  = yes
 snmp::global::comms::values::2  = no
-
+snmp::global::comms::weight     = 5
