Process weighted health status in scanner core.
Ignore old alerts, generate health file, invoke shutdown, assign weights
to agent summaries.

--- a/Scanner/Config/ipmi.conf
+++ b/Scanner/Config/ipmi.conf
@@ -1,11 +1,21 @@
 # IPMI config file
 #
+
+# Each config file uses a unique prefix for data. Specify what that
+# prefix is, so a single reading routine can handle all the different
+# files.
+#
+name = ipmi
+
+# Agent metadata
+#
 ipmi::host  = an-c07n01.alteeve.ca
 ipmi::ip    = 10.255.4.251
 ipmi::type  = server node
 ipmi::query = wipmi
 
-
+# specifications for the various attributes
+#
 ipmi::summary::max        = 100
 ipmi::summary::ok_min     = 0
 ipmi::summary::ok_max     = 0
