--- a/Scanner/Config/raid.conf
+++ b/Scanner/Config/raid.conf
@@ -1,10 +1,21 @@
 # RAID config file
 #
+
+# Each config file uses a unique prefix for data. Specify what that
+# prefix is, so a single reading routine can handle all the different
+# files.
+#
+name = raid
+
+# Agent metadata
+#
 raid::host  = an-c07n01.alteeve.ca
 raid::ip    = 10.255.4.251
 raid::type  = RAID subsystem
 raid::query = wstorcli
 
+# specifications for the summary data & various attributes
+#
 raid::summary::max        = 100
 raid::summary::ok_min     = 0
 raid::summary::ok_max     = 0
