--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -20,6 +20,14 @@
 # can display the snmp_apc_ups object and see the separate values.
 #
 
+# Each config file uses a unique prefix for data. Specify what that
+# prefix is, so a single reading routine can handle all the different
+# files.
+#
+name = snmp
+
+# Agent metadata
+#
 snmp::1::name      = an-u01
 snmp::1::type      = APC UPS
 snmp::1::ip        = 10.20.3.251
@@ -30,6 +38,8 @@ snmp::2::type      = APC UPS
 snmp::2::ip        = 10.20.3.252
 snmp::2::community = public
 
+# specifications for the summary data & various attributes
+#
 snmp::global::summary::max        = 100
 snmp::global::summary::ok_min     = 0
 snmp::global::summary::ok_max     = 0
