Made it work under ordinary 'sh'

--- a/Scanner/Makefile
+++ b/Scanner/Makefile
@@ -4,23 +4,28 @@
 # Pass all lines in a 'recipe' to a single shell instance, rather than
 # one shell per line. Make the shell be bash.
 #
-.ONESHELL:
-SHELL := /bin/bash
 
-USER  := ${shell whoami}
+.ONESHELL:
+#SHELL := /bin/bash
+
+USER  := ${shell /usr/bin/whoami}
 
 wrapper:
 	@echo "running as $(USER) - shell is $(SHELL)"
-	if [ "$(USER)" == "root" ]
-	then
-	    echo "Entering Src directory to make wrappers"
-	    cd Src && $(MAKE)
-	else
-	    echo "Need to be root to create wrappers."
-	    echo "run as: sudo make"
+	@if [[ "$(USER)" == "root" ]] ; then			\
+	    echo "Entering Src directory to make wrappers";	\
+	    cd Src && $(MAKE);					\
+	else							\
+	    echo "Need to be root to create wrappers.";		\
+	    echo "run as: sudo make";				\
 	fi
 
+test:
+	prove t/*.t
+
+cover:
+	cd t && ./test_coverage
 clean:
 	-rm -rf *~ \#* *.bak *.tdy
 
-	
+
